crates/ink/tests/ui/storage_item/fail/packed_is_not_derived_automatically.stderr
error[E0277]: expected `NonPacked` to use a "packed" layout
  --> tests/ui/storage_item/fail/packed_is_not_derived_automatically.rs:15:30
   |
15 |     let _ = consume_packed::<NonPacked>();
   |                              ^^^^^^^^^ `NonPacked` does not currently use a "packed" layout
   |
   = help: the trait `Packed` is not implemented for `NonPacked`
   = note: consider adding `#[ink::storage_item(packed)]` to `NonPacked`
   = note: if `NonPacked` is a standard library collection like `Vec<T>`, then consider adding `#[ink::storage_item(packed)]` to `T`
   = note: learn more at https://use.ink/docs/v6/datastructures/storage-layout#packed-vs-non-packed-layout
note: required by a bound in `consume_packed`
  --> tests/ui/storage_item/fail/packed_is_not_derived_automatically.rs:12:22
   |
12 | fn consume_packed<T: Packed>() {}
   |                      ^^^^^^ required by this bound in `consume_packed`
